--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "npx ts-node src/utils/seedDatabase.ts"
   },
   "keywords": [],
   "author": "",
